--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
   "homepage": "https://github.com/joshcinco3/MTGBot#readme",
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
+    "@discordjs/opus": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/voice": "^0.6.0",
     "discord-api-types": "^0.22.0",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "ffmpeg-static": "^4.4.0",
+    "libsodium-wrappers": "^0.7.9",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.2",
+    "youtube-dl-exec": "^1.2.6",
+    "yt-search": "^2.10.1",
+    "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0"
